# paperback-source-diagnosis-tool

./: .gitignore  .nsi  LICENSE  README.md  TODO.txt  build.py  main.spec  pyproject.toml
.github/workflows/: release.yml
_preqequisite_setup/: main.py  main.spec
advanced_self_diagnosis/: __init__.py  main.py  mitm_log_target.py
