[tool.poetry]
name = "advanced-self-diagnosis"
version = "0.1.0"
description = ""
authors = ["Ivanmatthew <76107136+Ivanmatthew@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mitmproxy = "^10.2.4"
aiohttp = {extras = ["speedups"], version = "^3.9.3"}
asyncio = "^3.4.3"
pyside6 = "^6.6.3"
requests = "^2.31.0"
regex = "^2023.12.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
