[tool.poetry]
name = "advanced-self-diagnosis"
version = "0.1.2"
description = ""
authors = ["Ivanmatthew <76107136+Ivanmatthew@users.noreply.github.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.scripts]
exe-dist = "build:build"
pack-dist = "build:pack"
dist = "build:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.6.3"
requests = "^2.31.0"
regex = "^2023.12.25"


[tool.poetry.group.dev.dependencies]
mitmproxy = "^10.2.4"
pyinstaller = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
